--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -14,7 +14,14 @@
 </head>
 
 <body>
-    {{{body}}}
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col">
+                {{{body}}}
+            </div>
+        </div>
+    </div>
 
 
     {{!-- Bootstrap Plugins --}}
