--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,2 +1,2 @@
 <h3>Home</h3>
-<a href="/logout" class="btn btn-outline-info btn-lg" role="button">Logout</a>
+<a href="/auth/logout" class="btn btn-outline-info btn-lg" role="button">Logout</a>
