Added form to login page and styled it

--- a/views/layouts/login.hbs
+++ b/views/layouts/login.hbs
@@ -15,14 +15,17 @@
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" />
 
+    {{!-- Main css --}}
+    <link rel="stylesheet" href="/css/style.css">
+
     <title>Blog-Review Login</title>
 </head>
 
 <body>
-    <div class="container-fluid">
-        <div class="row justify-content-center">
-            <div class="col-md-10 col-lg-6">
-                <div class="card text-center">
+    <div class="container-fluid h-100">
+        <div class="row align-items-center justify-content-center h-100">
+            <div class="col-md-10 col-lg-5 mb-5">
+                <div class="card text-center mb-5">
                     {{{body}}}
                 </div>
             </div>
