--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,38 +1,77 @@
 <div class="card-header">
-    <ul class="nav nav-pills card-header-pills nav-fill">
-        <li class="nav-item">
-            <a class="nav-link active btn-outline-dark">Login</a>
+    <ul class="nav nav-pills card-header-pills nav-fill" id="pills-tab" role="tablist">
+        <li class="nav-item" role="presentation">
+            <button class="btn active btn-outline-dark btn-block shadow-none" id="login-pill" data-bs-toggle="pill"
+                data-bs-target="#login" type="button" role="pill">Login</button>
         </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/signup">Signup</a>
+        <li class="nav-item" role="presentation">
+            <button class="btn btn-outline-dark btn-block shadow-none" id="signup-pill" data-bs-toggle="pill"
+                data-bs-target="#signup" type="button" role="pill">Signup</button>
         </li>
     </ul>
 </div>
-<div class="card-body">
-    <h3 class="card-title">Login</h3>
-    <form>
-        <div class="form-row justify-content-center my-4">
-            <div class="col-8">
-                <input type="text" class="form-control" placeholder="Email">
-            </div>
-        </div>
-        <div class="form-row justify-content-center my-4">
-            <div class="col-8">
-                <input type="text" class="form-control" placeholder="Password">
-            </div>
-        </div>
-        <div class="form-row justify-content-center my-4">
-            <div class="col-8">
-                <button type="submit" class="btn btn-block btn-outline-dark">Login</button>
-            </div>
-        </div>
 
-    </form>
+<div class="tab-content">
+    <div class="tab-pane active" id="login" role="tabpanel">
+        <div class="card-body">
+            <h3 class="card-title">Login</h3>
+            <form>
+                <div class="form-row justify-content-center my-4">
+                    <div class="col-8">
+                        <input type="text" class="form-control" placeholder="Email">
+                    </div>
+                </div>
+                <div class="form-row justify-content-center my-4">
+                    <div class="col-8">
+                        <input type="text" class="form-control" placeholder="Password">
+                    </div>
+                </div>
+                <div class="form-row justify-content-center my-4">
+                    <div class="col-8">
+                        <button type="submit" class="btn btn-block btn-outline-dark">Login</button>
+                    </div>
+                </div>
+            </form>
 
-    <hr class="mt-4" />
+            <hr class="mt-4" />
 
-    <a href="/auth/google" class="btn btn-outline-danger btn-lg" role="button">
-        <i class="fab fa-google fa-lg"></i>
-        <i class="fas fa-plus fa-lg"></i>
-    </a>
+            <a href="/auth/google" class="btn btn-outline-danger btn-lg" role="button">
+                <i class="fab fa-google fa-lg"></i>
+                <i class="fas fa-plus fa-lg"></i>
+            </a>
+        </div>
+    </div>
+
+    <div class="tab-pane" id="signup" role="tabpanel">
+        <div class="card-body">
+            <h3 class="card-title">Signup</h3>
+            <form>
+                <div class="form-row justify-content-center my-4">
+                    <div class="col-8">
+                        <input type="text" class="form-control" placeholder="Email">
+                    </div>
+                </div>
+                <div class="form-row justify-content-center my-4">
+                    <div class="col-8">
+                        <input type="text" class="form-control" placeholder="Username">
+                    </div>
+                </div>
+                <div class="form-row justify-content-center my-4">
+                    <div class="col-8">
+                        <input type="text" class="form-control" placeholder="Password">
+                    </div>
+                </div>
+                <div class="form-row justify-content-center my-4">
+                    <div class="col-8">
+                        <input type="text" class="form-control" placeholder="Confirm Password">
+                    </div>
+                </div>
+                <div class="form-row justify-content-center my-4">
+                    <div class="col-8">
+                        <button type="submit" class="btn btn-block btn-outline-dark">Signup</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
 </div>
