--- a/views/login.hbs
+++ b/views/login.hbs
@@ -15,15 +15,15 @@
     <div class="tab-pane active" id="login" role="tabpanel">
         <div class="card-body">
             <h3 class="card-title">Login</h3>
-            <form>
+            <form action="/auth/login" method="POST" class="needs-validation" novalidate>
                 <div class="form-row justify-content-center my-4">
                     <div class="col-8">
-                        <input type="text" class="form-control" placeholder="Email">
+                        <input type="username" class="form-control" placeholder="Username" name="username" required>
                     </div>
                 </div>
                 <div class="form-row justify-content-center my-4">
                     <div class="col-8">
-                        <input type="text" class="form-control" placeholder="Password">
+                        <input type="password" class="form-control" placeholder="Password" name="password" required>
                     </div>
                 </div>
                 <div class="form-row justify-content-center my-4">
@@ -45,25 +45,25 @@
     <div class="tab-pane" id="signup" role="tabpanel">
         <div class="card-body">
             <h3 class="card-title">Signup</h3>
-            <form>
+            <form action="/auth/signup" method="POST" class="needs-validation" novalidate>
                 <div class="form-row justify-content-center my-4">
                     <div class="col-8">
-                        <input type="text" class="form-control" placeholder="Email">
+                        <input type="text" class="form-control" placeholder="Username" name="username" required>
                     </div>
                 </div>
                 <div class="form-row justify-content-center my-4">
                     <div class="col-8">
-                        <input type="text" class="form-control" placeholder="Username">
+                        <input type="password" class="form-control" placeholder="Password" name="password" id="password"
+                            required>
                     </div>
                 </div>
                 <div class="form-row justify-content-center my-4">
                     <div class="col-8">
-                        <input type="text" class="form-control" placeholder="Password">
-                    </div>
-                </div>
-                <div class="form-row justify-content-center my-4">
-                    <div class="col-8">
-                        <input type="text" class="form-control" placeholder="Confirm Password">
+                        <input type="password" class="form-control" placeholder="Confirm Password" id="confirm_password"
+                            name="confirm_password" required>
+                        <div class="invalid-feedback">
+                            Passwords do not match!
+                        </div>
                     </div>
                 </div>
                 <div class="form-row justify-content-center my-4">
