--- a/views/login.hbs
+++ b/views/login.hbs
@@ -15,7 +15,7 @@
     <div class="tab-pane active" id="login" role="tabpanel">
         <div class="card-body">
             <h3 class="card-title">Login</h3>
-            <form action="/auth/login" method="POST" class="needs-validation" novalidate>
+            <form action="/" method="POST" class="needs-validation" novalidate>
                 <div class="form-row justify-content-center my-4">
                     <div class="col-8">
                         <input type="username" class="form-control" placeholder="Username" name="username" required>
@@ -45,7 +45,7 @@
     <div class="tab-pane" id="signup" role="tabpanel">
         <div class="card-body">
             <h3 class="card-title">Signup</h3>
-            <form action="/auth/signup" method="POST" class="needs-validation" novalidate>
+            <form action="/" method="POST" class="needs-validation" novalidate>
                 <div class="form-row justify-content-center my-4">
                     <div class="col-8">
                         <input type="text" class="form-control" placeholder="Username" name="username" required>
