--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -10,6 +10,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
+    {{!-- FA Icons --}}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+        crossorigin="anonymous" />
+
+    {{!-- Main css file --}}
     <link rel="stylesheet" href="/css/style.css">
 
     <title>Blog-Review</title>
@@ -17,6 +23,7 @@
 
 <body>
 
+    {{> _navbar}}
     <div class="container-fluid">
         <div class="row">
             <div class="col">
