--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -30,6 +30,11 @@
                 {{{body}}}
             </div>
         </div>
+        <div class="row">
+            <div class="col d-flex">
+                {{> _add_btn}}
+            </div>
+        </div>
     </div>
 
 
