Set up tmdb api

--- a/views/partials/_navbar.hbs
+++ b/views/partials/_navbar.hbs
@@ -19,8 +19,8 @@
             </li>
         </ul>
 
-        <form class="d-flex mx-lg-5 mb-lg-0 mb-2">
-            <input class="form-control mr-2" type="search" placeholder="Search" aria-label="Search">
+        <form action="/movie" method="POST" class="d-flex mx-lg-5 mb-lg-0 mb-2">
+            <input class="form-control mr-2" type="search" placeholder="Search" name="search" aria-label="Search">
             <button class="btn btn-secondary" type="submit">Search</button>
         </form>
         <a href="/auth/logout" class="btn btn-outline-warning ml-lg-auto" role="button">Logout</a>
