--- a/views/post_review.hbs
+++ b/views/post_review.hbs
@@ -1,4 +1,4 @@
-<h3>Add Blog</h3>
+<h3>Write your review!</h3>
 <div class="row">
     <form action="/review" method="POST" class="col s12">
         <div class="col">
@@ -10,7 +10,7 @@
 
         <div class="col">
             <div class="input-field">
-                <h5>Write your blog:</h5>
+                <h5>Content:</h5>
                 <textarea name="body" id="body"></textarea>
             </div>
         </div>
