--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,3 +27,11 @@ html {
 .nav-link-ltr:hover::before {
   width: 100%;
 }
+
+.movie-list a:hover,
+.movie-list a:visited,
+.movie-list a:link,
+.movie-list a:active {
+  color: black;
+  text-decoration: none;
+}
