Minor changes to homepage

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -6,10 +6,10 @@
             <img src="https://image.tmdb.org/t/p/original/{{movie.image}}" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">{{movie.title}}</h5>
-                <p class="card-text">{{body}}</p>
+                <p class="card-text">{{coverDesc}}</p>
             </div>
-            <div class="card-footer">
-                <small class="text-muted">{{user.local.userName}}</small>
+            <div class="card-footer d-flex justify-content-end">
+                <small class="text-muted"> - {{user.local.userName}}</small>
             </div>
         </div>
     </div>
