--- a/views/layouts/post_review.hbs
+++ b/views/layouts/post_review.hbs
@@ -59,6 +59,9 @@
             min_height: 500,
             object_resizing: true,
             nonbreaking_force_tab: true,
+            setup: editor => {
+                editor.on('change', e => editor.save())
+            }
         });
 
     </script>
