--- a/views/movie.hbs
+++ b/views/movie.hbs
@@ -1,7 +1,7 @@
 <div class="row row-cols-1 row-cols-md-4 g-4 movie-list">
     {{#each data}}
     <div class="col">
-        <a href="/post?id={{id}}">
+        <a href="/review/post?id={{id}}">
             <div class="card h-100">
                 <img src='https://image.tmdb.org/t/p/original{{poster_path}}' class="card-img-top" alt="...">
                 <div class="card-body">
