--- a/views/post_review.hbs
+++ b/views/post_review.hbs
@@ -1,6 +1,6 @@
 <h3>Write your review!</h3>
 <div class="row">
-    <form action="/review?id={{movieId}}" method="POST" class="col s12">
+    <form action="/review/post?id={{movieId}}" method="POST" class="col s12">
         <div class="col">
             <div class="input-field">
                 <input type="text" id="coverDesc" name="coverDesc" maxlength="350" required>
