--- a/views/home.hbs
+++ b/views/home.hbs
@@ -8,7 +8,7 @@
                     <img src="https://image.tmdb.org/t/p/original/{{movie.image}}" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">{{movie.title}}</h5>
-                        <p class="card-text">{{coverDesc}}</p>
+                        <p class="card-text">{{{coverDesc}}}</p>
                     </div>
                 </a>
             </div>
