--- a/views/partials/_navbar.hbs
+++ b/views/partials/_navbar.hbs
@@ -15,7 +15,7 @@
                 <a class="nav-link nav-link-ltr" href="/">Favorites</a>
             </li>
             <li class="nav-item mx-lg-4">
-                <a class="nav-link nav-link-ltr" href="/user">Profile</a>
+                <a class="nav-link nav-link-ltr" href="/user?u={{userId}}">Profile</a>
             </li>
         </ul>
 
