--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -20,6 +20,7 @@
                 <a href="#" class="btn btn-outline-success btn-sm mr-auto" style="font-size:medium; border:none">Read
                     more
                 </a>
+                {{{editBtn user._id ../userId _id}}}
                 <small class="text-muted my-auto"> - {{user.local.userName}}</small>
             </div>
         </div>
