--- a/views/partials/_navbar.hbs
+++ b/views/partials/_navbar.hbs
@@ -19,7 +19,7 @@
             </li>
         </ul>
 
-        <form action="/movie" method="POST" class="d-flex mx-lg-5 mb-lg-0 mb-2 w-25">
+        <form action="/movie" method="POST" class="d-flex mx-lg-5 mb-lg-0 mb-2">
             <input class="form-control mr-2" type="search" placeholder="Review Movie" name="search" aria-label="Search">
             <button class="btn btn-secondary" type="submit">Search</button>
         </form>
