--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -18,12 +18,14 @@
     {{!-- Main css file --}}
     <link rel="stylesheet" href="/css/style.css">
 
+
     <title>Blog-Review</title>
 </head>
 
 <body>
 
     {{> _navbar}}
+    {{> _add_btn}}
     <div class="container-fluid">
         <div class="row">
             <div class="col">
@@ -43,7 +45,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-beta3/js/bootstrap.min.js"
         integrity="sha512-mp3VeMpuFKbgxm/XMUU4QQUcJX4AZfV5esgX72JQr7H7zWusV6lLP1S78wZnX2z9dwvywil1VHkHZAqfGOW7Nw=="
         crossorigin="anonymous"></script>
-
 
 </body>
 
