Changes to nav bar

--- a/views/partials/_navbar.hbs
+++ b/views/partials/_navbar.hbs
@@ -19,13 +19,13 @@
             </li>
         </ul>
 
-        <form action="/movie" method="POST" class="d-flex mx-lg-5 mb-lg-0 mb-2">
+        {{!-- <form action="/review" method="POST" class="d-flex mx-lg-5 mb-lg-0 mb-2">
             <input class="form-control search-input mr-2" type="search" placeholder="Review Movie" name="search"
                 aria-label="Search">
             <button class="btn search" type="submit">
                 <i class="fas fa-search"></i>
             </button>
-        </form>
+        </form> --}}
         <a href="/auth/logout" class="btn btn-outline-warning ml-lg-auto" role="button">Logout</a>
     </div>
 </nav>
