--- a/public/css/style.css
+++ b/public/css/style.css
@@ -73,3 +73,17 @@ html {
 .search-input {
   padding-right: 3.2rem;
 }
+
+.movie-list a:hover,
+.movie-list a:visited,
+.movie-list a:link,
+.movie-list a:active {
+  color: black;
+  text-decoration: none;
+}
+
+.username-link,
+.username-link:hover {
+  text-decoration: none;
+  color: #f67a23;
+}
