--- a/views/home.hbs
+++ b/views/home.hbs
@@ -20,11 +20,11 @@
                 <a href="#" class="btn btn-outline-success btn-sm mr-auto" style="font-size:medium; border:none">Read
                     more
                 </a>
-
-
                 {{{deleteBtn user._id ../userId _id}}}
                 {{{editBtn user._id ../userId _id}}}
-                <small class="text-muted my-auto"> - {{user.local.userName}}</small>
+                <small class="text-muted my-auto"> - <a href="/user?u={{user._id}}" class="username-link" >
+                {{user.local.userName}}
+                </a></small>
             </div>
         </div>
     </div>
