--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,8 +1,8 @@
-<div class="row row-cols-1 row-cols-md-4 g-4">
+<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-xl-4 g-4">
     {{#if reviews}}
     {{#each reviews}}
-    <div class="col">
-        <div class="card h-100">
+    <div class="col my-4">
+        <div class="card h-100 border-0">
             <div class="movie-list">
                 <a href="/review/view?r={{_id}}">
                     <img src="https://image.tmdb.org/t/p/original/{{movie.image}}" class="card-img-top" alt="...">
