--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -7,7 +7,7 @@ $info: $alt-secondary;
 $navbar-dark-color: $secondary;
 $card-bg: $primary;
 $card-color: #ffffff;
-$card-border-color: $secondary;
+// $card-border-color: $secondary;
 
 @import "../../node_modules/bootstrap/scss/bootstrap";
 
