Fixed login page issue

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -4,9 +4,9 @@ $alt-secondary: #422057;
 $dark: $primary;
 $warning: $secondary;
 $info: $alt-secondary;
-$navbar-dark-color: $secondary;
-$card-bg: $primary;
-$card-color: #ffffff;
+// $navbar-dark-color: $secondary;
+// $card-bg: $primary;
+// $card-color: #ffffff;
 // $card-border-color: $secondary;
 
 @import "../../node_modules/bootstrap/scss/bootstrap";
