--- a/views/partials/_navbar.hbs
+++ b/views/partials/_navbar.hbs
@@ -4,7 +4,7 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <a class="navbar-brand btn btn-dark disabled ml-auto">
-        <i class="fas fa-film fa-lg"></i>
+        <i class="fas fa-film fa-lg" style="color: #f2aa4c;"></i>
     </a>
     <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
         <ul class="navbar-nav ml-lg-5 me-auto mb-2 mb-lg-0">
@@ -26,6 +26,6 @@
                 <i class="fas fa-search"></i>
             </button>
         </form> --}}
-        <a href="/auth/logout" class="btn btn-outline-warning ml-lg-auto" role="button">Logout</a>
+        <a href="/auth/logout" class="btn btn-outline-warning mx-lg-4" role="button">Logout</a>
     </div>
 </nav>
