--- a/views/partials/_navbar.hbs
+++ b/views/partials/_navbar.hbs
@@ -1,7 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark nav-color">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+    <button class="navbar-toggler fas fa-bars" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample">
     </button>
     <a class="navbar-brand btn btn-dark disabled ml-auto">
         <i class="fas fa-film fa-lg" style="color: #f2aa4c;"></i>
@@ -18,14 +16,28 @@
                 <a class="nav-link nav-link-ltr" href="/user?u={{userId}}">Profile</a>
             </li>
         </ul>
-
-        {{!-- <form action="/review" method="POST" class="d-flex mx-lg-5 mb-lg-0 mb-2">
-            <input class="form-control search-input mr-2" type="search" placeholder="Review Movie" name="search"
-                aria-label="Search">
-            <button class="btn search" type="submit">
-                <i class="fas fa-search"></i>
-            </button>
-        </form> --}}
         <a href="/auth/logout" class="btn btn-outline-warning mx-lg-4" role="button">Logout</a>
+    </div>
+
+
+    <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+        <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasExampleLabel" style="color: white;">Offcanvas</h5>
+            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+            <ul class="navbar-nav ml-lg-5 me-auto mb-2 mb-lg-0">
+                <li class="nav-item mx-lg-4">
+                    <a class="nav-link nav-link-ltr" aria-current="page" href="/home">Home</a>
+                </li>
+                <li class="nav-item mx-lg-4">
+                    <a class="nav-link nav-link-ltr" href="/fav">Favorites</a>
+                </li>
+                <li class="nav-item mx-lg-4">
+                    <a class="nav-link nav-link-ltr" href="/user?u={{userId}}">Profile</a>
+                </li>
+            </ul>
+            <a href="/auth/logout" class="btn btn-outline-warning mx-lg-4" role="button">Logout</a>
+        </div>
     </div>
 </nav>
