--- a/views/partials/_navbar.hbs
+++ b/views/partials/_navbar.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark nav-color">
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark nav-color">
     <button class="navbar-toggler fas fa-bars" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample">
     </button>
     <a class="navbar-brand btn btn-dark disabled ml-auto">
